flux/apps/misery.systems/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: misery-systems-web
  namespace: misery-systems-web
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`misery.systems`) && Headers(`X-Forwarded-Proto`, `https`)
      kind: Rule
      services:
        - name: misery-systems-web
          port: 4321
    - match: Host(`misery.systems`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: traefik
      services:
        - name: misery-systems-web
          port: 4321
  tls:
    secretName: misery-systems-web-tls
